--- a/frontend/src/components/ButtonIcon/styles.css
+++ b/frontend/src/components/ButtonIcon/styles.css
@@ -3,8 +3,8 @@
 }
 
 .btn-container button {
-    border-radius: 10px 0 0 10px;
     width: calc(100% - 50px);
+    border-radius: 10px 0 0 10px;
 }
 
 .btn h6 {
@@ -28,6 +28,10 @@
     .btn-icon-container {
         width: 70px;
         height: 70px;
+    }
+
+    .btn-container button {
+        width: calc(100% - 70px);
     }
 
     .btn h6 {
