--- a/frontend/src/components/Navbar/styles.css
+++ b/frontend/src/components/Navbar/styles.css
@@ -31,3 +31,42 @@
 .main-menu a:hover {
   color: #fff;
 }
+
+.nav-login-logout {
+  display: none;
+}
+
+.nav-username {
+  display: none;
+}
+.adm-navbar {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .nav-login-logout {
+    display: unset;
+    color: #fff;
+    margin-right: 15px;
+  }
+  .adm-navbar {
+    display: unset;
+  }
+}
+
+@media (min-width: 992px) {
+  .nav-login-logout {
+    margin-right: 40px;
+    .adm-navbar {
+      display: unset;
+    }
+  }
+
+  .nav-username {
+    display: unset;
+    margin-right: 20px;
+  }
+  .adm-navbar {
+    display: unset;
+  }
+}
