--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,6 +14,12 @@ h6 {
   font-weight: 700;
 }
 
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
 a,
 a:hover {
   text-decoration: none;
@@ -25,6 +31,7 @@ a:hover {
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
 }
+
 .base-input {
   border-radius: 10px;
   font-size: 1em;
